Updated the body text

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>AbhijithSugunan</title>
 </head>
 <body>
-    <h1>Page under construction</h1>
+    <h1>Page under construction...</h1>
 </body>
 </html>
