Added under construction images

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AbhijithSugunan</title>
+    <link rel="shortcut icon" href="./assets/images/fav.png" type="image/png">
+    <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
-    <h1>Page under construction...</h1>
+    <img src="./assets/images/under-construction.svg" alt="page under construction">
 </body>
 </html>
