Created a sample page for CV and added few styles for it

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
+    <a href="cv.html">Resume</a>
     <img src="./assets/images/under-construction.svg" alt="page under construction">
 </body>
 </html>
