commented out the download pdf button

--- a/cv.html
+++ b/cv.html
@@ -131,7 +131,7 @@
 </head>
 
 <body class="cv" data-new-gr-c-s-check-loaded="14.990.0" data-gr-ext-installed="">
-  <button onclick="getPDF()" id="downloadbtn"><b>Click to Download HTML as PDF</b></button>
+  <!-- <button onclick="getPDF()" id="downloadbtn"><b>Click to Download HTML as PDF</b></button> -->
   <div class="cv-page h-resume canvas_div_pdf">
     <div class="cv-page-inner">
       <div class="cv-section cv-header p-contact h-card">
