Updated few points

--- a/cv.html
+++ b/cv.html
@@ -191,7 +191,7 @@
             </li>
             <li>Used to participate in algorithm programming competitions.</li>
             <li>
-              Open to evolving in: Go, nodejs, python, Docker, Kubernetes, and many else.
+              Open to evolving in: Go, nodejs, python, Docker, Kubernetes, and much more.
             </li>
           </ul>
         </div>
@@ -223,8 +223,10 @@
                     Created clear architecture APIs in .Net Core
                   </li>
                   <li>
-                    Worked with Dexie.js for handling IndexDB for PWA applications. And also got an oppertunity to
-                    implement the ngsx library on a project that I worked on.
+                    Worked with Dexie.js for handling IndexDB for PWA applications.
+                  </li>
+                  <li>
+                    Experience in implementing ngsx library on a project for handling the state.
                   </li>
                   <li>
                     Created CI/CD pipeline for angular application in GitLab.
@@ -329,7 +331,7 @@
                 </p>
                 <ul>
                   <li>
-                    Created educational prototype project in Angular 2. (in Angular 2)
+                    Created educational prototype project in Angular 2.
                   </li>
                   <li>
                     Contributed to in-house C++ based Web Application Framework (Santiago)
@@ -395,18 +397,18 @@
 
 
       <div class="cv-section">
-        <h3 class="cv-section-title">Other perks</h3>
+        <h3 class="cv-section-title">Personal</h3>
         <div class="cv-section-content cv-section-content--indented">
           <ul>
             <li>
-              Knowledge of algorithms and data structures.
+              On free time explore new technologies and read technical blogs.
             </li>
             <li>
               Speaks fluent English and Malayalam
             </li>
             <!-- <li>Danced ballroom for a couple of years and willing to continue it. Also a frequent tennis player.</li> -->
             <li>
-              In his free time, likes to travel, and play cricket and play pc games.
+              Likes to travel, and play cricket and play pc games.
             </li>
           </ul>
         </div>
