--- a/cv.html
+++ b/cv.html
@@ -275,10 +275,6 @@
                     improvement in the project.
                   </li>
                   <li>
-                    Developed a Utility application in WinForm creating SQL queries from .xlxs files for a process
-                    improvement in the project.
-                  </li>
-                  <li>
                     Also got many opportunities to interact with the global developers since they consist of developers
                     in different regions.
                   </li>
@@ -401,7 +397,7 @@
         <div class="cv-section-content cv-section-content--indented">
           <ul>
             <li>
-              On free time explore new technologies and read technical blogs.
+              During free times explores new technologies and read technical blogs.
             </li>
             <li>
               Speaks fluent English and Malayalam
