--- a/cv.html
+++ b/cv.html
@@ -404,7 +404,7 @@
             </li>
             <!-- <li>Danced ballroom for a couple of years and willing to continue it. Also a frequent tennis player.</li> -->
             <li>
-              Likes to travel, and play cricket and play pc games.
+              Likes to travel, play cricket and pc games.
             </li>
           </ul>
         </div>
